--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity
             android:name=".ResultsActivity"
             android:label="@string/app_name" />
+        <activity android:name=".HistoryActivity"></activity>
     </application>
 
 </manifest>
