--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,10 +22,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".BarcodeScanner" />
         <activity
-            android:name=".ResultsActivity"
-            android:label="@string/app_name" />
+            android:name=".BarcodeScanner"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ResultsActivity"/>
+            <!--android:label="@string/app_name" />-->
         <activity android:name=".HistoryActivity" />
         <activity android:name=".FavoriteActivity"></activity>
     </application>
