--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,14 @@
         <!-- android:label="@string/app_name" /> -->
         <activity android:name=".HistoryActivity" />
         <activity android:name=".FavoriteActivity" />
-        <activity android:name=".TitleSearchActivity"></activity>
+
+        <activity android:name=".TitleSearchActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable"/>
+        </activity>
     </application>
 
 </manifest>
