--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,9 +27,10 @@
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ResultsActivity"/>
+            android:name=".ResultsActivity"
+            android:label= ""/>
             <!--android:label="@string/app_name" />-->
-        <activity android:name=".HistoryActivity" />
+        <activity android:name=".HistoryActivity"/>
         <activity android:name=".FavoriteActivity"></activity>
     </application>
 
