completed accurate styling throughout all pages

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,8 +30,10 @@
             android:name=".ResultsActivity"
             android:label= ""/>
             <!--android:label="@string/app_name" />-->
-        <activity android:name=".HistoryActivity"/>
-        <activity android:name=".FavoriteActivity"></activity>
+        <activity android:name=".HistoryActivity"
+            android:label= ""/>
+        <activity android:name=".FavoriteActivity"
+            android:label= ""></activity>
     </application>
 
 </manifest>
